// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Notification/Notification should render Notification with primary and secondary content 1`] = `
<div
  aria-live="polite"
  className="cc-notification cc-notification-theme"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="status"
>
  <NotificationIcon
    theme="info"
  />
  <div
    className="cc-notification__inner"
  >
    <div
      className="cc-notification-elements"
    >
      <span>
        primary
      </span>
      <span>
        secondary
      </span>
    </div>
  </div>
  <button
    className="cc-notification-close__button"
    onClick={[Function]}
    role="close"
  >
    <CloseIcon />
  </button>
</div>
`;

exports[`UI/Notification/Notification should render Notification with title and content 1`] = `
<div
  aria-live="polite"
  className="cc-notification cc-notification-theme"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="status"
>
  <NotificationIcon
    theme="info"
  />
  <div
    className="cc-notification__inner"
  >
    <div
      className="cc-notification__title"
    >
      <strong>
        Title
      </strong>
    </div>
    <div
      className="cc-notification__content"
    >
      Content
    </div>
  </div>
  <button
    className="cc-notification-close__button"
    onClick={[Function]}
    role="close"
  >
    <CloseIcon />
  </button>
</div>
`;

exports[`UI/Notification/Notification should render default Notification 1`] = `
<div
  aria-live="polite"
  className="cc-notification cc-notification-theme"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="status"
>
  <NotificationIcon
    theme="info"
  />
  <div
    className="cc-notification__inner"
  />
  <button
    className="cc-notification-close__button"
    onClick={[Function]}
    role="close"
  >
    <CloseIcon />
  </button>
</div>
`;

exports[`UI/Notification/Notification should render not closable Notification 1`] = `
<div
  aria-live="assertive"
  className="cc-notification cc-notification-theme"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  role="alertdialog"
>
  <NotificationIcon
    theme="danger"
  />
  <div
    className="cc-notification__inner"
  />
</div>
`;

exports[`UI/Notification/NotificationIcon should render NotificationIcon with danger theme 1`] = `
<div
  className="cc-notification__icon"
>
  <ExclamationFilledIcon
    color="#ff6666"
    exactSize={20}
  />
</div>
`;

exports[`UI/Notification/NotificationIcon should render NotificationIcon with info theme 1`] = `""`;

exports[`UI/Notification/NotificationIcon should render NotificationIcon with specified icon 1`] = `
<div
  className="cc-notification__icon"
>
  <IconEdit />
</div>
`;

exports[`UI/Notification/Snackbar should render Snackbar with content 1`] = `
<div
  aria-live="polite"
  className="container"
  role="status"
>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    className="popup"
    direction="top"
    scope="inplace"
    view="default"
    visible={true}
  >
    <div
      className="snackbar"
    >
      <NotificationIcon
        icon={
          <IconHashtag
            className="icon"
          />
        }
        theme="success"
      />
      <Text
        className="title"
        typography="subheader-m"
      >
        Content
      </Text>
    </div>
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</div>
`;

exports[`UI/Notification/Snackbar should render Snackbar with danger theme 1`] = `
<div
  aria-live="assertive"
  className="container"
  role="alertdialog"
>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    className="popup"
    direction="top"
    scope="inplace"
    view="default"
    visible={true}
  >
    <div
      className="snackbar"
    >
      <NotificationIcon
        icon={
          <IconHashtag
            className="icon"
          />
        }
        theme="danger"
      />
    </div>
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</div>
`;

exports[`UI/Notification/Snackbar should render Snackbar with icon 1`] = `
<div
  aria-live="polite"
  className="container"
  role="status"
>
  <SimpleComposeWrapper [nonvisual:true],[view:default]
    className="popup"
    direction="top"
    scope="inplace"
    view="default"
    visible={true}
  >
    <div
      className="snackbar"
    >
      <NotificationIcon
        icon={<IconEdit />}
        theme="info"
      />
    </div>
  </SimpleComposeWrapper [nonvisual:true],[view:default]>
</div>
`;
